--- a/src/main/resources/templates/lecturer/resource_type/lecturer_update-resource-type-of-course.html
+++ b/src/main/resources/templates/lecturer/resource_type/lecturer_update-resource-type-of-course.html
@@ -132,7 +132,7 @@
     var errorParam = [[${param.error}]];
     if (errorParam) {
         Swal.fire(
-            'Error!',
+            'This resource type is defined!',
             'Please check resource type information again!',
             'error'
         );
