--- a/src/main/resources/templates/student/student_search-results.html
+++ b/src/main/resources/templates/student/student_search-results.html
@@ -149,7 +149,7 @@
 <script th:src="@{/js/student/student.js}"></script>
 <style>
     .highlight {
-        background-color: yellow;
+        background-color: #ffff7a;
         font-weight: bold;
     }
 </style>
