--- a/src/main/resources/templates/lecturer/document/lecturer_update-document.html
+++ b/src/main/resources/templates/lecturer/document/lecturer_update-document.html
@@ -168,9 +168,9 @@
                                                 <br>
                                                 <b>- Image:</b> .jpg, .jpeg, .gif, .png, .svg
                                                 <br>
-                                                <b>- Video:</b> .mp4, .webm, .mov, .avi, .flv, .mkv
+                                                <b>- Video:</b> .mp4, .webm, .ogg
                                                 <br>
-                                                <b>- Audio:</b> .mp3, .flac, .aac, .wav
+                                                <b>- Audio:</b> .mp3, .flac, .ogg
                                             </i>
                                         </div>
                                     </div>
@@ -181,14 +181,7 @@
                                         class="btn btn-save lecturer_btn-save"
                                         id="submitAllData">Save changes
                                 </button>
-                                <th:block th:if="${param.success}">
-                                    <a class="btn btn--back" href="javascript:void(0);"
-                                       onclick="history.go(-2);">Back</a>
-                                </th:block>
-                                <th:block th:unless="${param.success}">
-                                    <a class="btn btn--back" href="javascript:void(0);"
-                                       onclick="history.go(-1);">Back</a>
-                                </th:block>
+                                <a class="btn btn--back" th:href="@{'/lecturer/topics/'+${topicId}}">Back</a>
                             </form>
                         </div>
 
