--- a/src/main/resources/templates/exception/404.html
+++ b/src/main/resources/templates/exception/404.html
@@ -15,6 +15,9 @@
         <h3 class="d-none" th:text="${errorMessage}"></h3>
     </div>
     <div style="display: flex; justify-content: center; margin-top: 4rem">
+        <a class="btn btn--back" href="/login">Login</a>
+    </div>
+    <div style="display: flex; justify-content: center; margin-top: 4rem">
         <a class="btn btn--back" href="javascript:void(0);" onclick="history.go(-1);">Back</a>
     </div>
 </div>
