--- a/src/main/resources/templates/librarian/librarian_dashboard.html
+++ b/src/main/resources/templates/librarian/librarian_dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard</title>
+    <title>Librarian dashboard</title>
     <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <!-- Bootstrap core CSS -->
@@ -62,7 +62,7 @@
                         <i class="p-2 fas fa-chalkboard-teacher"></i>
                         Login as lecturer</a>
                 </div>
-                <div class="lib-main_menu-item">
+                <div class="lib-main_menu-item d-none">
                     <a th:href="@{/librarian/login_as_student}">
                         <i class="p-2 fa fa-graduation-cap" aria-hidden="true"></i>
                         Login as student</a>
