--- a/src/main/resources/templates/lecturer/resource_type/lecturer_update-resource-type-of-course.html
+++ b/src/main/resources/templates/lecturer/resource_type/lecturer_update-resource-type-of-course.html
@@ -121,10 +121,11 @@
     validate_updateresourceType();
 
     var successParam = [[${param.success}]];
+    console.log('Error Parameter:', successParam);
     if (successParam) {
         Swal.fire(
             'Success!',
-            'Save resource type successful!',
+            'Update resource type successful!',
             'success'
         );
     }
