--- a/src/main/resources/templates/librarian/course/librarian_update-course.html
+++ b/src/main/resources/templates/librarian/course/librarian_update-course.html
@@ -95,10 +95,10 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="lib_input-label"><label th:for="trainingTypes">Training Type:</label>
+                                    <td class="lib_input-label"><label th:for="trainingType">Training Type:</label>
                                     </td>
-                                    <td><select class="form-control" th:field="*{trainingType}" name="status"
-                                                th:id="trainingTypes">
+                                    <td><select class="form-control" th:field="*{trainingType}" name="trainingType"
+                                                th:id="trainingType">
 
                                         <option th:each="trainingType : ${trainingTypes}"
                                                 th:text="${trainingType.getTrainingTypeName()}"
