export user log - fix

--- a/src/main/resources/templates/admin/system_log/admin_user_logs.html
+++ b/src/main/resources/templates/admin/system_log/admin_user_logs.html
@@ -239,7 +239,7 @@
                         };
                         $.ajax({
                             url: '/api/admin/export-user-logs',
-                            type: 'POST',
+                            type: 'GET',
                             data: data,
                             success: function (data) {
                             },
