--- a/src/main/resources/templates/admin/system_log/admin_user_logs.html
+++ b/src/main/resources/templates/admin/system_log/admin_user_logs.html
@@ -247,7 +247,7 @@
                     //         }
                     //     });
                     // },
-                    className: 'btn btn-save border',
+                    className: 'btn btn-save border export',
                     title: 'UserLogs',
                     extension: '.xlsx'
                 }
