--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -30,7 +30,7 @@
                            class="btn btn-login btn-primary auth-form__socials--google">
                             <i class="auth-form__socials-google-icon fab fa-google"></i>
                             <span class="auth-form__socials-title">
-                        Login with FPT edu mail
+                        Login with Goole
                         </span>
                         </a>
                         <a href="https://feid.fpt.edu.vn/Account/Login" style="height: 48px"
