--- a/src/main/resources/templates/librarian/course/librarian_course-detail.html
+++ b/src/main/resources/templates/librarian/course/librarian_course-detail.html
@@ -72,7 +72,7 @@
                                     <div><a href="#"
                                           class="btn btn_remove-lecturer mt-2 ps-2 pe-2 remove-lecturer"
                                           data-course-id="${course.getId()}"
-                                          th:data-course-id="${course.getId()}">Remove this lecturer's authority to manage the course</a>
+                                          th:data-course-id="${course.getId()}">Remove course management authority</a>
                                     </div>
                                 </td>
                                 <td th:unless="${checkLecturerCourse}">
